# chr

./: NEWS.md  README.md  meson.build  meson_options.txt
manpages/: chr.1  chr.de.1
src/: aboutdialog.cpp  confirmsave.cpp  edit.cpp  edit.h  file.cpp  formattingdialog.cpp  gotoline.cpp  groupbox.cpp  insertcharacter.cpp  mdilayout.cpp  mdilayout.h  meson.build  opendialog.cpp  overwritedialog.cpp  savedialog.cpp  searchdialog.cpp  syntaxhighlightdialog.cpp  tabdialog.cpp  wrapdialog.cpp
src/tests/: filetests.cpp  meson.build
